		       -) 'tick.tstep' and 'lab.tstep' now accept the values: "auto", "quarters", "weeks", "hours", 
	 		  "minutes", and "seconds", and its default value was changed to "auto". 
	o 'plotbandsonly': -) it works with xts objects as well
			   -) 'legend' argument was removed (it was not used)
			   -) 'leg.cex' argument was removed (it was not used)
	o 'NSeff': its name was changed to 'NSE'. The old name 'NSeff' is deprecated but is still working for backwards compatibility.
	o New dimension checking (number of columns and rows) for all the functions that are apllied over a matrix or data.frame
	o fixed error in the documentation of 'rd' (thanks to Tom Purucker !)
	

0.2-2	14-Apr-2011
	o new function: 'KGE', Kling-Gupta efficiency
	o 'ggof': argument 'lab.fmt' is used now, and 'KGE' is shown in the GoF legend
	o 'plot2': KGE is showed in the GoF legend
	o SVN started to be used for package development in Rforge (thanks to Simon Urbanek for his great support)        
	o Updated dependence on R >= 2.10.0


0.2-1	30-Nov-2010

	o Minor changes in documentation
	o R functions were split up into individual files
	o new function: 'plotbandsonly', adds uncertainty bounds only to an existing plot
	o 'ggof': argument '...' is used now, and a new argument 'lab.fmt', for specifying the format of the axis' labels
	o 'plotbands':  arguments 'ylab', 'cex.axis', 'cex.lab' are used now. 
			argument 'legend' can now be logical (FALSE), in order to allow not having it.
			new arguments 'ylim', 'lab.fmt' (for specifying the format of the axis' labels)
			'sim' is now correctly plotted when 'type="points"' is used.
	o 'plot2': new argument: 'lab.fmt', for specifying the format of the axis' labels



###################################################
# Previous Releases (see old file 'WhatsNew.txt)' #
###################################################

0.2-0: Release Date: 07-Oct-2010
0.1.3: Release Date: 01-Dec-2009
0.1.2: Release Date: 29-Oct-2009
0.1.1: Release Date: 05-Oct-2009