@@ -254,9 +254,9 @@ plot2 <- function (x, y,
              #paste( "pbiasFDC% =", gof.xy["pbiasFDC %", 1], sep=" "),
              paste( "RSR =", gof.xy["RSR", 1], sep=" "),
              paste( "rSD =", gof.xy["rSD", 1], sep=" "),             
-             paste( "NSeff =", gof.xy["NSeff", 1], sep=" "),
-             paste( "mNSeff =", gof.xy["mNSeff", 1], sep=" "),
-             paste( "rNSeff =", gof.xy["rNSeff", 1], sep=" "),
+             paste( "NSE =", gof.xy["NSE", 1], sep=" "),
+             paste( "mNSE =", gof.xy["mNSE", 1], sep=" "),
+             paste( "rNSE =", gof.xy["rNSE", 1], sep=" "),
              paste( "d =", gof.xy["d", 1], sep=" "),
              paste( "md =", gof.xy["md", 1], sep=" "),
              paste( "rd =", gof.xy["rd", 1], sep=" "),
