@@ -70,7 +70,9 @@ Mauricio Zambrano Bigiarini <mauricio.zambrano@ing.unitn.it>
 \note{
 \code{obs} and \code{sim} has to have the same length/dimension \cr
 
-The missing values in \code{obs} and \code{sim} are removed before the computation proceeds, and only those positions with non-missing values in \code{obs} and \code{sim} are considered in the computation
+The missing values in \code{obs} and \code{sim} are removed before the computation proceeds, and only those positions with non-missing values in \code{obs} and \code{sim} are considered in the computation. \cr
+
+If some of the observed values are equal to zero (at least one of them), this index can not be computed.
 }
 
 %% ~Make other sections like Warning with \section{Warning }{....} ~
